test/Execute/SyntaxErrorTest/list_comp_missing_yield.typh
let xs = [for (x in range(3)) x]

"""stderr
syntax error: $FILE:1:10
  unknown tokens

    1 |  let xs = [for (x in range(3)) x]
                  ^^^^^^^^^^^^^^^^^^^^^^^
"""
